--- a/fastapi/values.yaml
+++ b/fastapi/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: fallewi/datascientestapi
+  repository: p0l1na/datascientestapi
   pullPolicy: IfNotPresent
   tag: ""
 
